<resources>

    <string name="app_name">Oilfield Drilling Jobs</string>
    <string name="copyright_text">Copyright &#169; 2014 Wellsite Data Solutions\nAll Rights Reserved.</string>
    <string name="email_registration">Email Registration</string>
    <string name="drilling_jobs">Drilling Jobs</string>
    <string name="no_connection">Please make sure that connection is active</string>
    <string name="information">Information</string>
    <string name="please_enter_email_to_register">Please enter your email to register</string>
    <string name="please_register_with_email">Please register with your email address</string>
    <string name="please_enter_email_here">Please enter your email here</string>
    <string name="register_now">Register Now</string>
    <string name="register_text">We ask for your email address so that you can send job information to your personal email, or to be notified when a particular job is available</string>
    <string name="register_text2">As a registered user, you will be able to: (1) Automatically send job to your email; (2) Receive email notifications for job that you are interested in (in-app purchase required); (3) Shortlist your favourite jobs and send to your email the details.</string>
    <string name="be_notified_by_email">Be notified by email for specific jobs</string>
    <string name="job_notifications">Job Notifications</string>
    <string name="skip">SKIP ></string>
    <string name="enter_email">Please enter a valid email address</string>
    <string name="error">Error</string>
    <string name="registering_email">Registering email</string>
    <string name="ok">OK</string>
    <string name="jobs">Jobs</string>
    <string name="notification">Notification</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="no_jobs">No Jobs</string>
    <string name="load_jobs_first_time">It make take a few minutes for the first synchronisation. Please be patient.</string>
    <string name="last_update_pattern">Last Updated: %1$s</string>
    <string name="job_details">Job Details</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="job_description">Job Description</string>
    <string name="email_me">Email Me</string>
    <string name="open_link">Open Link</string>
    <string name="share_job_pattern">Download the BIGGEST drilling job listing on mobile: oilfielddrillingjobs.com.\nHere is a good one: %1$s</string>
    <string name="share_via">Share via</string>
    <string name="email_via">Email via</string>
    <string name="open_via">Open via</string>
    <string name="search">Search</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_valid_email">Please enter a valid email address</string>
    <string name="sending_email">Sending email(s)</string>
    <string name="emails_sent">Email(s) sent</string>
    <string name="emails_send_error">Error while sending email(s)</string>
    <string name="notification_setup">Notification Setup</string>
    <string name="setup">Setup</string>
    <string name="job_position">Job Position</string>
    <string name="add_job_position">add job position</string>
    <string name="job_location">Job Location</string>
    <string name="add_job_location">add job location</string>
    <string name="loading_subscription_list">Loading subscription list</string>
    <string name="whats_this">What\'s this?</string>
    <string name="position_info_text">Click on \"add job position\" for the locations you are interested in. Any new jobs that match with the Job Locations &amp; Job Positions you have added, the application will notify you and an automated email will be sent (if you have bought an in-app purchase)</string>
    <string name="location_info_text">Click on \"add job location\" for the locations you are interested in. Any new jobs that match with the Job Locations &amp; Job Positions you have added, the application will notify you and an automated email will be sent (if you have bought an in-app purchase)</string>
    <string name="please_enter_location_keyword">Please enter location keyword</string>
    <string name="please_enter_position_keyword">Please enter position keyword</string>
    <string name="adding_new_job_position">Adding new job position</string>
    <string name="adding_new_job_location">Adding new job location</string>
    <string name="deleting_job_position">Deleting job position</string>
    <string name="deleting_job_location">Deleting job location</string>
    <string name="job_position_max_limit_reached">Reached maximum limit for Job Position</string>
    <string name="job_location_max_limit_reached">Reached maximum limit for Job Location</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="clear_notification_list">Clear Notification List</string>
    <string name="all_jobs_will_be_cleared">All jobs will be cleared</string>
    <string name="confirmation">Confirmation</string>
    <string name="you_sure_want_delete_subscription">Are you sure you want to delete this item?</string>
    <string name="no_jobs_notifications">No Jobs Notifications</string>
    <string name="no_notifications_text">Go to Notification Setup (top right\nbutton) and add Position(s) and or\nLocation()s.</string>
    <string name="no_favourite_jobs">No Favourite Jobs</string>
    <string name="no_favourite_jobs_text">You can favourite a job in Jobs -\nJob Details by click on the star\nsymbol.</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="selected_pattern">%1$d selected</string>
    <string name="registered_email">Registered Email</string>
    <string name="job_list_history">Job List History</string>
    <string name="support_and_feedback">Support &amp; Feedback</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="about">About</string>
    <string name="other_apps">Other Apps</string>
    <string name="oilfield_drilling_jobs">Oilfield Drilling Jobs 1.0</string>
    <string name="about_the_app">About the App</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="share_app_text">Oilfield Drilling Jobs is the BIGGEST job listing for drilling people on the mobile. Download the app from www.oilfielddrillingjobs.com</string>
    <string name="app_1_title">Oilfield Abbreviations</string>
    <string name="app_1_link">https://play.google.com/store/apps/details?id=com.wds.oilfieldAbbreviations</string>
    <string name="app_2_title">Oilfield Well Control Practice</string>
    <string name="app_2_link">https://play.google.com/store/apps/details?id=com.wds.wellControlPractice</string>
    <string name="just_now">Just now</string>
    <string name="few_seconds_ago">Few seconds ago</string>
    <string name="minute_ago">A minute ago</string>
    <string name="few_minutes_ago">Few minutes ago</string>
    <string name="hour_ago">An hour ago</string>
    <string name="few_hours_ago">Few hours ago</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="few_days_ago">Few days ago</string>
    <string name="last_week">Last week</string>
    <string name="few_weeks_ago">Few weeks ago</string>
    <string name="last_month">Last month</string>
    <string name="few_month_ago">Few month ago</string>
    <string name="last_year">Last year</string>
    <string name="few_years_ago">Few years ago</string>
    
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
	<string name="pull_to_refresh_release_label">Release to refresh...</string>
	<string name="pull_to_refresh_refreshing_label">Loading...</string>
    
    <string-array name="menu_items">
        <item>@string/jobs</item>
        <item>@string/notification</item>
        <item>@string/favourites</item>
        <item>@string/settings</item>
    </string-array>
    
    <string-array name="history_items">
        <item>Last 3 Days</item>
        <item>Last 7 Days</item>
        <item>Last 20 Days</item>
    </string-array>

</resources>
