<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background">
    
    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#139df6"
       	android:textColor="@android:color/white"
        android:text="@string/email_registration" />
        
    <TextView 
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:text="@string/please_enter_valid_email" />
    
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edittext_background_black"
        android:textColorHint="#c1c1c7"
        android:textColor="#139df6"
        android:textSize="16sp"
        android:inputType="textEmailAddress" />
    
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="#9b9e9e" />
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    style="?android:attr/buttonBarStyle">
    
		<Button 
		    android:id="@+id/cancelBtn"
		    style="?android:attr/buttonBarButtonStyle"
		    android:layout_width="0dp"
		 	android:layout_height="wrap_content"
		 	android:layout_weight="1"
		    android:textColor="#139df6"
		    android:text="@string/cancel" />
		
		<View
		 	android:layout_width="1px"
		    android:layout_height="match_parent"
		    android:background="#9b9e9e" />
		
		<Button 
		    android:id="@+id/registerBtn"
		    style="?android:attr/buttonBarButtonStyle"
		    android:layout_width="0dp"
		 	android:layout_height="wrap_content"
		 	android:layout_weight="1"
		    android:textColor="#139df6"
		    android:text="@string/ok" />
		
	</LinearLayout>

</LinearLayout>
