<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:orientation="vertical">
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="15dp"
	        android:textColor="#139df6" 
	        android:textSize="16sp"
	        android:text="@string/please_register_with_email" />
	
	    <EditText
	        android:id="@+id/email"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/edittext_background_grey"
	        android:textColorHint="#c1c1c7"
	        android:textColor="#139df6"
	        android:textSize="16sp"
	        android:inputType="textEmailAddress"
	        android:hint="email@somewhere.com" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="15dp"
	        android:textColor="#808080"
	        android:textSize="16sp"
	        android:text="@string/register_text2" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:textColor="#40403f"
	        android:textSize="16sp"
	        android:text="@string/be_notified_by_email" />
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@android:color/white"
	        android:layout_marginTop="5dp">
	    
		    <View
				android:layout_width="match_parent"
				android:layout_height="1px"
				android:background="#cccccc" />
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:gravity="center_vertical">
		    
			    <TextView
			       	android:layout_width="0dp"
			       	android:layout_height="wrap_content"
			       	android:layout_weight="1"
			       	android:padding="15dp"
			       	android:textColor="@android:color/black"
			       	android:textSize="18sp"
			       	android:text="@string/job_notifications"
			       	android:gravity="left|center_vertical" />
			    
			    <Switch 
			        android:id="@+id/notificationsBtn"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="15dp"
			        android:checked="true" />
		    
		    </LinearLayout>
		    
		    <View
				android:layout_width="match_parent"
				android:layout_height="1px"
				android:background="#cccccc" />
	
		</LinearLayout>
		
	</LinearLayout>
	
</RelativeLayout>