<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/main_background">
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="left"
            android:textColor="#404040"
            android:textSize="18sp"
            android:text="@string/job_position" />
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cccccc" />
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@android:color/white">
                
                <TextView
                	android:id="@+id/addPositionBtn"
                	android:layout_width="0dp"
                	android:layout_height="wrap_content"
                	android:layout_weight="1"
                	android:padding="15dp"
                	android:gravity="left|center_vertical"
                	android:drawableLeft="@drawable/icon_add"
                	android:drawablePadding="10dp"
                	android:textColor="#30d384"
                	android:textSize="18sp"
                	android:text="@string/add_job_position" />
                
                <ImageView 
                    android:id="@+id/positionInfoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/icon_info" />
                
            </LinearLayout>
                
            <LinearLayout 
                android:id="@+id/positionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white" />
            
        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="left"
            android:textColor="#404040"
            android:textSize="18sp"
            android:text="@string/job_location" />
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cccccc" />
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@android:color/white">
                
                <TextView
                	android:id="@+id/addLocationBtn"
                	android:layout_width="0dp"
                	android:layout_height="wrap_content"
                	android:layout_weight="1"
                	android:padding="15dp"
                	android:gravity="left|center_vertical"
                	android:drawableLeft="@drawable/icon_add"
                	android:drawablePadding="10dp"
                	android:textColor="#30d384"
                	android:textSize="18sp"
                	android:text="@string/add_job_location" />
                
                <ImageView 
                    android:id="@+id/locationInfoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/icon_info" />
                
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/locationContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white" />
            
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>
